# Pendant2019

./: CMakeLists.txt  Pendant2019.atsln  Pendant2019.cproj  README.md  atmel_start.c  atmel_start.h  atmel_start_pins.h  bq25895.cpp  bq25895.h  commands.cpp  commands.h  driver_init.c  emulator.cpp  emulator.h  leds.cpp  leds.h  main.cpp  model.cpp  model.h  murmur_hash3.cpp  murmur_hash3.h  openocd.cfg  sdd1306.cpp  sdd1306.h  stubs.c  sx1280.cpp  sx1280.h  system_time.cpp  system_time.h  timeline.cpp  timeline.h  ui.cpp  ui.h  usb_start.c
.atmelstart/: AtmelStart.env_conf  atmel_start_config.atstart
Config/: RTE_Components.h  hpl_eic_config.h  hpl_port_config.h  hpl_sercom_config.h  peripheral_clk_config.h  usbd_config.h
Device_Startup/: startup_samd51.c
Pendant2019/: Pendant2019.atsln
Pendant2019/Pendant2019/: CMakeLists.txt  Default.xml  Pendant2019.componentinfo.xml  Pendant2019.cproj  atmel_start_pins.h  bq25895.cpp  bq25895.h  commands.cpp  commands.h  driver_init.c  driver_init.h  emulator.cpp  emulator.h  leds.cpp  leds.h  main.c  main.cpp  model.cpp  model.h  murmur_hash3.cpp  openocd.cfg  sdd1306.cpp  sdd1306.h  stubs.c  sx1280.cpp  sx1280.h  system_time.cpp  system_time.h  timeline.cpp  timeline.h  ui.cpp  ui.h  usb_start.c  usb_start.h
Pendant2019/Pendant2019/.atmelstart/: AtmelStart.gpdsc
Pendant2019/Pendant2019/Config/: hpl_eic_config.h  hpl_gclk_config.h  hpl_oscctrl_config.h  hpl_qspi_config.h  hpl_sercom_config.h  peripheral_clk_config.h
Pendant2019/Pendant2019/examples/: driver_examples.c
Pendant2019/Pendant2019/hal/src/: hal_usart_sync.c  hal_usb_device.c
Pendant2019/Pendant2019/hpl/eic/: hpl_eic.c
Pendant2019/Pendant2019/hpl/sercom/: hpl_sercom.c
Pendant2019/Pendant2019/samd51a/atdf/: ATSAMD51G19A.atdf  ATSAMD51N20A.atdf
Pendant2019/Pendant2019/samd51a/edc/: ATSAMD51G19A.PIC  ATSAMD51J18A.PIC  ATSAMD51J19A.PIC  ATSAMD51N19A.PIC
Pendant2019/Pendant2019/samd51a/iar/iar/: samd51g18a_flash.icf  samd51g19a_flash.icf  samd51g19a_sram.icf  samd51j18a_flash.icf  samd51j18a_sram.icf  samd51n19a_sram.icf  samd51n20a_sram.icf  samd51p19a_sram.icf  samd51p20a_sram.icf  startup_samd51.c
Pendant2019/Pendant2019/samd51a/keil/Flash/ATSAMD51/: FlashDev.c  FlashPrg.c
examples/: driver_examples.c  driver_examples.h
font/: convert.sh  duck_font.h
hal/include/: hal_atomic.h  hal_custom_logic.h  hal_flash.h  hal_gpio.h  hal_i2c_m_async.h  hal_i2c_m_sync.h  hal_init.h  hal_io.h  hal_qspi_sync.h  hal_rand_sync.h  hal_sha_sync.h  hal_spi_m_sync.h  hal_timer.h  hal_usart_sync.h  hal_usb_device.h  hal_wdt.h  hpl_calendar.h  hpl_cmcc.h  hpl_dma.h  hpl_flash.h  hpl_i2c_m_async.h  hpl_i2c_m_sync.h  hpl_i2c_s_async.h  hpl_i2c_s_sync.h  hpl_irq.h  hpl_qspi.h  hpl_qspi_dma.h  hpl_qspi_sync.h  hpl_ramecc.h  hpl_rand_sync.h  hpl_reset.h  hpl_sha.h  hpl_sha_sync.h  hpl_spi.h  hpl_spi_async.h  hpl_spi_dma.h  hpl_spi_sync.h  hpl_timer.h  hpl_usart.h  hpl_usart_async.h  (+5 more)
hal/src/: hal_cache.c  hal_evsys.c  hal_ext_irq.c  hal_flash.c  hal_i2c_m_async.c  hal_i2c_m_sync.c  hal_timer.c  (+7 more)
hri/: hri_ac_d51.h  hri_adc_d51.h  hri_aes_d51.h  hri_ccl_d51.h  hri_cmcc_d51.h  hri_dac_d51.h  hri_dmac_d51.h  hri_dsu_d51.h  hri_eic_d51.h  hri_evsys_d51.h  hri_freqm_d51.h  hri_gclk_d51.h  hri_hmatrixb_d51.h  hri_i2s_d51.h  hri_icm_d51.h  hri_mclk_d51.h  hri_mpu_d51.h  hri_nvic_d51.h  hri_nvmctrl_d51.h  hri_osc32kctrl_d51.h  hri_oscctrl_d51.h  hri_pac_d51.h  hri_pcc_d51.h  hri_pdec_d51.h  hri_pm_d51.h  hri_port_d51.h  hri_qspi_d51.h  hri_ramecc_d51.h  hri_rstc_d51.h  hri_rtc_d51.h  hri_sdhc_d51.h  hri_sercom_d51.h  hri_supc_d51.h  hri_systemcontrol_d51.h  hri_systick_d51.h  hri_tc_d51.h  hri_tcc_d51.h  hri_trng_d51.h  hri_usb_d51.h  hri_wdt_d51.h
usb/: usb_includes.h  usb_protocol.c  usb_protocol.h
(+63 files in other folders)
